# libserial

./: CMakeLists.txt
include/libserial/: line_reader.h  serial_port.h  string_splitter.h
source/: line_reader.cpp  serial_port.cpp  serial_port_impl.h  serial_port_impl_linux.cpp  serial_port_impl_linux.h  serial_port_impl_win32.cpp  serial_port_impl_win32.h  string_splitter.cpp
